--- a/ui/app.ui
+++ b/ui/app.ui
@@ -149,6 +149,9 @@
            <height>64</height>
           </size>
          </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
@@ -218,6 +221,12 @@
           <font>
            <pointsize>12</pointsize>
           </font>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QAbstractScrollArea::AdjustToContents</enum>
+         </property>
+         <property name="autoScroll">
+          <bool>true</bool>
          </property>
          <property name="showGrid">
           <bool>false</bool>
