--- a/ui/app.ui
+++ b/ui/app.ui
@@ -231,6 +231,12 @@
          <property name="autoScroll">
           <bool>true</bool>
          </property>
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::NoSelection</enum>
+         </property>
          <property name="showGrid">
           <bool>false</bool>
          </property>
@@ -265,6 +271,9 @@
           </property>
           <item>
            <widget class="QTableWidget" name="frameIDTable">
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
             <property name="alternatingRowColors">
              <bool>false</bool>
             </property>
@@ -323,7 +332,7 @@
                 </font>
                </property>
                <property name="text">
-                <string>Clear Filter</string>
+                <string>Apply Filter</string>
                </property>
               </widget>
              </item>
